<resources>
    <string name="app_name">My_Craze_Mad_Lip_MM</string>
    <string name="edit_message">Name</string>
    <string name="button_send">Map Libs!</string>
    <string name="second_word">Last_Name</string>
    <string name="instructions">Instructions: \nList all the words according to their description and then click "Mad Libs"</string>
    <string name="Word2">Exclamation Statement</string>
    <string name="Word3">Adjective</string>
    <string name="Word4">Past Tense Verb</string>
    <string name="Word5">Noun</string>
    <string name="Word6">Verb ending in \'ing\'</string>
    <string name="Word7">Band Name</string>
    <string name="Word8">Time Frame</string>
    <string name="Word9">Living Organism</string>
    <string name="Word10">Animal</string>

    <string name="Mad_Lip1">Inside an island separated from mankind, the young and ruthless</string>
    <string name="Mad_Lip2">became the greatest warrior.</string>
    <string name="Mad_Lip3">"He said!" He was said to be a little</string>
    <string name="Mad_Lip4"> because his mom was</string>
    <string name="Mad_Lip5">by a titan. Nevertheless, his determination was to end all</string>
    <string name="Mad_Lip6">in the world.\n He grabbed his swords and started </string>
    <string name="Mad_Lip7">Armin and Jean in their training camp. He would not stop until he could join the</string>
    <string name="Mad_Lip8">Regiment. \n After many</string>
    <string name="Mad_Lip9">, he eventually realized he could not fight anymore </string>
    <string name="Mad_Lip10">, so he decided to destroy 80% of</string>
    <string name="Mad_Lip11"> Happily Ever After.</string>

</resources>